fix: 增加up-outlined down-outlined right-outlined icon

--- a/packages/ui-icons/osui-icons/README.html
+++ b/packages/ui-icons/osui-icons/README.html
@@ -87,6 +87,9 @@
     <img width="16" height="16" src="./svg/table-sort-outlined.svg"/>
     <br/><sub>IconTableSortOutlined</sub>
     </td><td align="center">
+    <img width="16" height="16" src="./svg/up-outlined.svg"/>
+    <br/><sub>IconUpOutlined</sub>
+    </td></tr><tr><td align="center">
     <img width="16" height="16" src="./svg/vertical-align-top-outlined.svg"/>
     <br/><sub>IconVerticalAlignTopOutlined</sub>
-    </td></tr></tbody></table>
+    </td><td align="center"></td><td align="center"></td></tr></tbody></table>
